--- a/src/Infrastructure/EtlOrchestrator.Infrastructure/EtlOrchestrator.Infrastructure.csproj
+++ b/src/Infrastructure/EtlOrchestrator.Infrastructure/EtlOrchestrator.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="ETLBox" Version="3.7.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
     <PackageReference Include="Hangfire.Core" Version="1.8.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
