--- a/src/Orchestrator.App/EtlOrchestrator.Orchestrator.App/appsettings.json
+++ b/src/Orchestrator.App/EtlOrchestrator.Orchestrator.App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EtlOrchestrator;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EtlOrchestrator;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
